--- a/assets/index.html
+++ b/assets/index.html
@@ -62,7 +62,26 @@
                 </section>
 
                 <section>
-                    <!-- APP_INFO_V2 -->
+                    <h2>Make the application your own</h2>
+<form>
+    <label for="twilio-phone-number">Your configured Twilio phone number</label>
+      <input type="text" id="twilio-phone-number" class="phone-number" readonly=true value="+1 206 558 0734">
+    <div style="align-self: start; display: inline-block;">
+        <div style="display:flex; justify-content:center; padding:1rem 0;">
+            <a target="_blank" href="https://www.twilio.com/console/functions/editor/ZS84b943c01f06833633740552614179e2/environment/ZE9633e8d61877deea365c38d23ad07d6c/config/variables?app_title=json-webhook"
+                style="
+                        background-color: white;
+                        color:  rgb(2, 99, 224);
+                        border: 1px solid rgb(2, 99, 224);
+                        border-radius: 4px;
+                        font-size: 14px;
+                        font-weight: 600;
+                        text-decoration: none;
+                        padding: 6px 12px;"
+            >Edit this application</a>
+        </div>
+    </div>
+</form>
                 </section>
                 <section>
                     <h2>Troubleshooting</h2>
